--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -17,6 +17,7 @@
   
   * {
     scroll-behavior: smooth;
+    scrollbar-width: 0.3rem;
   }
   
   *::-webkit-scrollbar {
